# easytokenizer

./: CMakeLists.txt  LICENSE  README.md  README.rst  demo.cc  demo.py  setup.py
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  demo.cc  speed_tests.cc
examples/python/: demo.py
pybind/easytokenizer/: bak_pybind.cc  pybind.cc
python/easytokenizer/: pybind.cc
python_testing/: test_speed.py
src/: cedar.h  dtrie.h  tests  tests.cc  tokenizer.cc  tokenizer.h  utf8proc.c
tests/: sents.txt  test_speed.py
